tests/testcases/invalid/01_unrecognized_character.ciel
fn main() -> int {
    int a = 1 @ 2;
    return 0;
}
